--- a/stylesheets/AlgebraReview.css
+++ b/stylesheets/AlgebraReview.css
@@ -63,8 +63,9 @@ h3 {
     text-align: center;
     display: inline-block;
     float: left;
-    width: 300px;
-    height: 60px;
+    font-size: 110%;
+    width: 200px;
+    height: 40px;
     background-color: rgba(200, 100, 200, .5);
     margin: 10px 0 0 10px;
     border-radius: 10px;
