--- a/stylesheets/AlgebraReview.css
+++ b/stylesheets/AlgebraReview.css
@@ -81,8 +81,10 @@ div.assignment:hover {
     display: table;
     overflow: hidden;
     float: left;
-    width: 300px;
-    height: 60px;
+    width: 200px;
+    height: 40px;
+    font-size: 110%;
+    font-weight: bold;
     background-color: rgba(250, 150, 250, .5);
     margin: 10px 0 0 10px;
     border-radius: 10px;
